# quantum-rf-pdk

./: .env  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  TEST_COVERAGE_ANALYSIS.md  build_cell.py  copier.yml  install_tech.py  justfile  mkdocs-pdf.yml  pyproject.toml  test_reqs.in  test_sample.py  tunable_coupler_demo.gds  zensical.toml
.github/: .bake.toml  .checkmake.ini  .markdownlint-cli2.yaml  .stylelintrc.yaml  .yamllint.yaml  AGENTS.md  CODEOWNERS  actionlint.yaml  check-notebook-sources.sh  convert-notebooks.sh  copilot-instructions.md  dependabot.yml  labeler.yml  lychee.toml  release-drafter.yml  write_cells.py  write_justfile_help.py  write_makefile_help.py  write_models.py  zizmor.yml
docs/: BUILDING_PDF.md  README_IPYTHON_CONFIG.md  _config.yml  _toc.yml  ai_usage_policy.md  api.rst  bibliography.bib  code_of_conduct.md  conf.py  contributing.md  docs.just  hooks.py  index.md  inject_buttons.py  ipython_config.py  just_commands.md  justfile_help.txt  lvs.md  make_commands.md  makefile.md  makefile_help.txt  models.rst  notebooks.rst  qpdk.mplstyle  security.md  zensical.toml
notebooks/: README.md  all_models.ipynb  circuit_simulation_demo.ipynb  circulax_transmon_optimization.ipynb  empro_driven_capacitor.ipynb  hfss_driven_capacitor.ipynb  hfss_eigenmode_resonator.ipynb  hfss_q2d_cpw_impedance.ipynb  jax_backend_comparison.ipynb  josim_rsfq_simulation.ipynb  klayout_pex_capacitance.ipynb  matlab_integration.ipynb  model_comparison_to_qucs.ipynb  monte_carlo_fabrication_tolerance.ipynb  netket_transmon_design.ipynb  optimize_capacitor_optuna.ipynb  palace_eigenmode_qubit_resonator.ipynb  pymablock_dispersive_shift.ipynb  qutip_qip_pulse_simulation.ipynb  resonator_frequency_model.ipynb  resonator_test_chip_simulation.ipynb  scqubits_parameter_calculation.ipynb
qpdk/: __init__.py  config.py  drc.py  helper.py  install_tech.py  layers.yaml  logger.py  models.py  tech.py  utils.py
qpdk--sample-projects/quantum-rf--public--pdk/: .gitignore  Makefile  README.md  pyproject.toml
qpdk--sample-projects/quantum-rf--public--pdk/.github/: write_cells_si220_cband.py
qpdk--sample-projects/quantum-rf--public--pdk/qpdk/: __init__.py  config.py  helper.py  install_tech.py
qpdk--sample-projects/quantum-rf--public--pdk/qpdk/cells/: __init__.py  junction.py  resonator.py  transmon.py
qpdk--sample-projects/quantum-rf--public--pdk/qpdk/cells/derived/: __init__.py  transmon_with_resonator_and_probeline.py
qpdk--sample-projects/quantum-rf--public--pdk/qpdk/models/: capacitor.py  constants.py  couplers.py  cpw.py  generic.py  math.py  qubit.py
qpdk--sample-projects/quantum-rf--public--pdk/qpdk/samples/: qubit_test_chip.scm.yml  resonator_test_chip.py  sample_to_3d.py
qpdk--sample-projects/quantum-rf--public--pdk/qpdk/simulation/: aedt_base.py
qpdk--sample-projects/quantum-rf--public--pdk/tests/: conftest.py  test.just  test_hfss.py  test_precommit_notebook_check.py  test_resonators.py
qpdk--sample-projects/quantum-rf--public--pdk/tests/gds_ref/: bend_circular.gds  bend_euler.gds  bend_euler_all_angle.gds  bend_s.gds  circle.gds  coupler_capacitive.gds  coupler_ring.gds  coupler_straight.gds  double_pad_transmon.gds  double_pad_transmon_with_bbox.gds  double_pad_transmon_with_resonator_and_probeline.gds  flipmon_with_bbox.gds  flipmon_with_resonator_and_probeline.gds  flux_qubit_asymmetric.gds  indium_bump.gds  josephson_junction.gds  launcher.gds  plate_capacitor_single.gds  qubit_with_resonator.gds  resonator_cpw.gds  resonator_half_wave_bend_both.gds  resonator_half_wave_bend_end.gds  resonator_lumped.gds  resonator_quarter_wave.gds  resonator_quarter_wave_bend_both.gds  resonator_quarter_wave_bend_end.gds  resonator_quarter_wave_bend_start.gds  straight.gds  straight_open.gds  transmon.gds  tsv.gds  wire_corner45.gds  xmon_transmon.gds
qpdk--sample-projects/quantum-rf--public--pdk/tests/models/: __init__.py  test_capacitor.py  test_compare_to_qucs.py  test_couplers.py  test_junction.py  test_models_imported.py  test_qubit.py  test_resonator.py  test_straight.py  test_taper.py
qpdk--sample-projects/quantum-rf--public--pdk/tests/models/data/: _csv_merger.py  dut.sch  inductor_qucs.csv  lc_resonator_qucs.csv
qpdk--sample-projects/quantum-rf--public--pdk/tests/test_pdk/: test_netlists_airbridge_.yml  test_netlists_airbridge_array_.yml  test_netlists_chip_edge_.yml  test_netlists_coupler_interdigital_.yml  test_netlists_double_pad_transmon_.yml  test_netlists_double_pad_transmon_with_bbox_.yml  test_netlists_flipmon_with_resonator_and_probeline_.yml  test_netlists_flux_qubit_.yml  test_netlists_flux_qubit_asymmetric_.yml  test_netlists_josephson_junction_long_.yml  test_netlists_nxn_.yml  test_netlists_plate_capacitor_.yml  test_netlists_resonator_half_wave_.yml  test_netlists_resonator_quarter_wave_.yml  test_netlists_resonator_quarter_wave_bend_end_.yml  test_netlists_single_josephson_junction_wire_.yml  test_netlists_transmon_.yml  test_netlists_transmon_circular_.yml  test_netlists_xmon_transmon_.yml  test_settings_airbridge_.yml  test_settings_airbridge_array_.yml  test_settings_bend_circular_.yml  test_settings_bend_euler_.yml  test_settings_bend_s_.yml  test_settings_chip_edge_.yml  test_settings_coupler_capacitive_.yml  test_settings_coupler_ring_.yml  test_settings_coupler_straight_.yml  test_settings_flipmon_.yml  test_settings_flipmon_with_bbox_.yml  test_settings_josephson_junction_long_.yml  test_settings_nxn_.yml  test_settings_plate_capacitor_single_.yml  test_settings_resonator_cpw_.yml  test_settings_resonator_lumped_.yml  test_settings_resonator_quarter_wave_.yml  test_settings_single_josephson_junction_wire_.yml  test_settings_snspd_.yml  test_settings_squid_junction_.yml  test_settings_straight_all_angle_.yml  (+4 more)
scripts/: bend_s.sim.yml  josephson_junction.sim.yml
template/: README.md.jinja  pyproject.toml.jinja
test_diffs/: flipmon_with_resonator_diff.gds  qubit_with_resonator_diff.gds  transmon_with_resonator_diff.gds
(+493 files in other folders)
