[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.8,<0.12.0"]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
docs = [
  "jinja2",
  "jupytext",
  "linkify-it-py",
  "matplotlib",
  "myst-nb>=1.0",
  "pydata-sphinx-theme",
  "scipy",
  "sphinx>=9.0",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-github-alerts>=1.0",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-bibtex-urn",
  "sphinxcontrib-katex",
  "sphinxcontrib-mermaid>=2.0.1",
  "sphinxcontrib-svgbob",
  {include-group = "docs-models"}
]
docs-models = [
  "flax",
  "gplugins[meshwell]>=2.0.1",
  "jaxellip",
  "netket>=3.12",
  "optax",
  "optuna",
  "pandas[parquet]",
  "polars",
  "pyaedt[graphics]>=0.15.0",
  "pymablock>=2.2.1",
  "qutip-jax>=0.1.1",
  "qutip-qip>=0.4.1",
  "ray[default]",
  "sax[rf]>=0.16.14",
  "scikit-rf",
  "scqubits",
  "sympy",
  "tqdm"
]
github = ["genbadge[coverage]", "setuptools"]
lint = ["prek", {include-group = "stubs"}]
stubs = ["scipy-stubs"]
test = [
  "hypothesis",
  "jsondiff",
  "pytest>=9.0.0",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
  "pytest_regressions",
  "pytest-xdist"
]

[project]
authors = [{name = "gdsfactory", email = "contact@gdsfactory.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "doroutes>=0.2.0",
  "gdsfactory>=9.39.0,<9.40.0",
  "typing-extensions>=4.12.0"
]
description = "Quantum-RF generic PDK"
keywords = [
  "gdsfactory",
  "layout",
  "microwave",
  "pdk",
  "python",
  "quantum",
  "rf",
  "simulation",
  "superconducting"
]
license = {file = "LICENSE"}
name = "qpdk"
readme = "README.md"
requires-python = ">=3.12,<3.14"
version = "0.3.6"

[project.optional-dependencies]
gdsfactoryplus = ["gdsfactoryplus"]
graphics = ["trimesh", "pyglet<3"]
hfss = ["polars", "pyaedt[graphics]>=0.15.0"]
models = [
  "gplugins[meshwell]>=2.0.1",
  "jaxellip",
  "optax",
  "optuna",
  "sax[rf]>=0.16.14",
  "scikit-rf",
  "sympy",
  "polars",
  "pandas[parquet]"
]
netket = ["netket>=3.12", "flax", "optax"]
pymablock = ["pymablock>=2.2.1"]
qutip = ["qutip-jax>=0.1.1", "qutip-qip>=0.4.1"]
ray = ["ray[default]", "tqdm"]
scqubits = ["scqubits"]

[project.urls]
"Bug Tracker" = "https://github.com/gdsfactory/quantum-rf-pdk/issues"
changelog = "https://github.com/gdsfactory/quantum-rf-pdk/releases"
documentation = "https://gdsfactory.github.io/quantum-rf-pdk/"
repository = "https://github.com/gdsfactory/quantum-rf-pdk/"

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, scheme, schem, Commun, Ue, inout"
skip = "bibliography.bib"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.", "pragma: no cover"]

[tool.coverage.run]
source = ["qpdk"]

[tool.gdsfactoryplus]
name = "qpdk"

[tool.gdsfactoryplus.drc]
pdk = "quantum_rf"
timeout = 300

[tool.gdsfactoryplus.pdk]
name = "qpdk"

[tool.gdsfactoryplus.sim.x]
max = 20  # 20GHz
min = 1  # 1GHz
name = "f"
num = 3000

[tool.interrogate]
docstring-style = "google"
exclude = [
  "docs/_build/**/*",
  "qpdk/**/__init__.py",
  "notebooks/**",
  "docs/notebooks/*",
  "qpdk/samples/*.py",
  "tests/**"
]
ext = []
fail-under = 100
ignore-nested-classes = true
ignore-nested-functions = true
ignore-regex = ["^test_.*"]
omit-covered-files = true
verbose = 2

[tool.mypy]
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pyrefly]
project-excludes = [
  "**/__pycache__",
  "**/.*",
  "docs/**",
  "build/**",
  "dist/**",
  "*.egg-info/**",
  ".venv/**",
  # Exclude samples that may have experimental code
  "qpdk/samples/*.py",
  "qpdk/samples/**/*.py",
  "notebooks/src/*.py",
  "notebooks/src/**/*.py"
]
project-includes = ["**/*.py"]

[tool.pyrefly.errors]
# Not all gdsfactory overloads are properly typed
no-matching-overload = "ignore"

[tool.pytest]
addopts = ["--tb=short"]
filterwarnings = [
  # gdsfactory internally warns about bend_euler for non-90/180 angles even
  # when the user calls bend_circular; suppress until upstream fixes this.
  "ignore:bend_euler angle should be 90 or 180:UserWarning",
  # Equinox uses deprecated JAX core internals; nothing we can fix upstream
  "ignore:jax\\.core\\.mapped_aval is deprecated:DeprecationWarning",
  "ignore:jax\\.core\\.unmapped_aval is deprecated:DeprecationWarning"
]
markers = [
  "hfss: mark test as requiring HFSS",
  "skip_windows: skip test on Windows"
]
norecursedirs = [
  "*.egg",
  ".*",
  "CVS",
  "_darcs",
  "build",
  "dist",
  "extra/*.py",
  "node_modules",
  "venv",
  "{arch}"
]
python_files = ["notebooks/*.ipynb", "qpdk/*.py", "tests/*.py"]
testpaths = ["qpdk/", "tests"]

[tool.ruff]
fix = true
preview = true

[tool.ruff.format]
docstring-code-format = true
exclude = ["*.ipynb"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
  "RUF001",  # ambiguous unicode characters (incl. lots of math)
  "RUF002",  # ambiguous unicode characters (incl. docstring greek letters)
  "RUF003",  # -||- but for comments
  "RUF067",  # non-empty-init-module
  "PLR2004",  # magic-value-comparison
  "PLR0913",  # too-many-arguments
  "PLR0914",  # too-many-locals
  "PLC2401",  # non-ascii-name
  "PLC2403",  # non-ascii-import-name
  "N806",  # non-lowercase-variable-in-function
  "N803",  # invalid-argument-name
  "ERA001",  # commented-out-code
  "PLR0917",  # too-many-positional-arguments
  "TRY003",  # long messages in exceptions
  "A004",  # builtin-import-shadowing
  "N816",  # mixed-case-variable-in-global-scope
  "PLC2701",  # import-private-name
  "PLR0911",  # too-many-return-statements
  "PLR6104",  # non-augmented-assignment
  "PLR0912",  # too-many-branches
  "PLR0915",  # too-many-statements
  "PLR0916",  # too-many-boolean-expressions
  "S404",  # suspicious-subprocess-import
  "PLW1510",  # subprocess-run-without-check
  "S607",  # start-process-with-partial-path
  "TC006"  # runtime-cast-value
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C4",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "T10",  # flake8-debugger
  "S",  # flake8-bandit
  "PT",  # flake8-pytest-style
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "Q",  # flake8-quotes
  "SLOT",  # flake8-slots
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "PD",  # pandas-vet
  "FLY",  # flynt
  "NPY",  # numpy
  "PERF",  # perflint
  "RUF",  # ruff
  "PL",  # pylint
  "N",  # pep8-naming
  "A",  # flake8-builtins
  "TRY",  # tryceratops
  "T20",  # flake8-print
  "ISC",  # flake8-implicit-str-concat
  "ERA",  # eradicate
  "FURB",  # refurb
  "DOC",  # pydoclint
  "ASYNC",  # flake8-async
  "TID",  # flake8-tidy-imports
  "C"  # flake8-comprehensions
]

[tool.ruff.lint.flake8-tidy-imports]
require-lazy = [
  "trimesh",
  "polars",
  "pyaedt",
  "gplugins",
  "jaxellip",
  "optax",
  "optuna",
  "sax",
  "sympy",
  "pandas",
  "netket",
  "flax",
  "pymablock",
  "qutip-jax",
  "qutip-qip",
  "scqubits"
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["D100", "T201"]
"qpdk/**/__init__.py" = ["F403"]  # allowing star imports to aggregate cells
"qpdk/cells/__init__.py" = ["F403"]
"qpdk/models/__init__.py" = ["F403"]
"qpdk/samples/**/*.py" = [
  "D100",
  "T201"
]  # no public module docstring for sample scripts, print allowed in samples
"tests/**" = ["S101", "D102", "D103", "ANN", "T201"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.lyp", "*.lyt", "*.csv", "*.gds", "*.oas"]

[tool.tbump]

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "qpdk/__init__.py"

[[tool.tbump.file]]
src = "README.md"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "0.3.6"

[tool.tombi.schema]
strict = false

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
template = ".changelog.d/changelog_template.jinja"

[tool.uv]
default-groups = ["dev", "lint", "stubs", "test"]

[tool.uv.build-backend]
module-root = ""
source-exclude = ["tests/**", "docs/**"]
